# libgui

./: CMakeLists.txt  Calculator.js  Calculator.wasm  ExampleRenderer2D.js  ExampleRenderer2D.wasm  ExampleWidget.js  ExampleWidget.wasm  Playground.js  Playground.wasm  README.md  index.html  playground-example.html  script.js
.github/workflows/: cmake-multi-platform.yml  deploy-example.yml  deploy-examples.yml  release.yaml
assets/shaders/: Quad.glsl
examples/: CMakeLists.txt
examples/Calculator/: CMakeLists.txt  eval.cpp  eval.hpp  main.cpp
examples/Playground/: CMakeLists.txt  main.cpp
examples/Renderer2D/: CMakeLists.txt  main.cpp
examples/Widget/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/Embedder/: CMakeLists.txt
libs/Embedder/include/: Asset.hpp  RootAsset.hpp
libs/Embedder/src/: Asset.cpp  RootAsset.cpp
scripts/: build_web.sh
src/: Gui.cpp  Gui.hpp  Window.cpp  Window.hpp
src/Core/: Base.hpp  Color.hpp  Editor.cpp  Editor.hpp  KeyCode.hpp  Log.cpp  Log.hpp  Macro.cpp  Macro.hpp  OpenGL.hpp  Type.hpp
src/Events/: Event.cpp  Event.hpp  FileDropEvent.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
src/Renderer/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer2D.cpp  Renderer2D.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Utils/: File.cpp  File.hpp  String.cpp  String.hpp
src/Widget/: Button.cpp  Button.hpp  CheckBox.cpp  CheckBox.hpp  Clickable.cpp  Clickable.hpp  Column.cpp  Column.hpp  Constraints.hpp  Container.cpp  Container.hpp  Input.cpp  Input.hpp  Label.cpp  Label.hpp  Row.cpp  Row.hpp  SizedBox.cpp  SizedBox.hpp  TextArea.cpp  TextArea.hpp  Widget.cpp  Widget.hpp
tests/: CMakeLists.txt
web/: calculator-example.html  index.html  renderer-example.html  script.js
